--- a/.env.templete
+++ b/.env.templete
@@ -9,7 +9,7 @@ MONGO_DATA_PATH=path_to_mongo_data_folder
 APP_DATA_PATH=path_to_app_data_folder
 
 LIMIT=10
-OPREATION=scraping,converting,clean_dump_files,api_update
+OPERATION=scraping,converting,clean_dump_files,api_update
 
 SUPABASE_TOKEN=supabase_token
 SUPABASE_URL=supabase_url
