--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
       - KAGGLE_USERNAME=${KAGGLE_USERNAME}
       - KAGGLE_DATASET_REMOTE_NAME=${KAGGLE_DATASET_REMOTE_NAME}
       - APP_DATA_PATH=app_data
+      - ENABLED_SCRAPERS=${ENABLED_SCRAPERS}
+      - ENABLED_FILE_TYPES=${ENABLED_FILE_TYPES}
 
     networks:
       - mongo-network
@@ -57,6 +59,7 @@ services:
       - APP_DATA_PATH=app_data
       - LIMIT=${LIMIT}
       - ENABLED_SCRAPERS=${ENABLED_SCRAPERS}
+      - ENABLED_FILE_TYPES=${ENABLED_FILE_TYPES}
     volumes:
       - app_data:/usr/src/app/app_data
     networks:
