--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -38,14 +38,6 @@ jobs:
         ref: ${{ inputs.branch }}
 
 
-    - name: Set enabled scrapers
-      run: |
-        echo "ENABLED_SCRAPERS=${{ inputs.enabled_scrapers }}" >> $GITHUB_ENV
-
-    - name: Set enabled file types
-      run: |
-        echo "ENABLED_FILE_TYPES=${{ inputs.enabled_file_types }}" >> $GITHUB_ENV
-        
     - name: Adding env variables
       run: |
         echo "APP_DATA_PATH=${{ env.GITHUB_WORKSPACE }}/app_data" >> $GITHUB_ENV
@@ -61,6 +53,7 @@ jobs:
         echo "KAGGLE_DATASET_REMOTE_NAME=${{ inputs.kaggle_dataset_remote_name }}" >> $GITHUB_ENV
         echo "ENABLED_SCRAPERS=${{ secrets.ENABLED_SCRAPERS }}" >> $GITHUB_ENV
         echo "ENABLED_FILE_TYPES=${{ secrets.ENABLED_FILE_TYPES }}" >> $GITHUB_ENV
+        echo "LIMIT=${{ secrets.LIMIT }}" >> $GITHUB_ENV
         
     - name: Build with Docker
       run: docker compose build
