--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -43,8 +43,8 @@ jobs:
         echo "ENABLED_SCRAPERS=${{ secrets.ENABLED_SCRAPERS }}" >> $GITHUB_ENV
         echo "ENABLED_FILE_TYPES=${{ secrets.ENABLED_FILE_TYPES }}" >> $GITHUB_ENV
         echo "LIMIT=${{ secrets.LIMIT }}" >> $GITHUB_ENV
-        echo "APP_DATA_PATH=${{ env.GITHUB_WORKSPACE }}/app_data" >> $GITHUB_ENV
-        echo "MONGO_DATA_PATH=${{ env.GITHUB_WORKSPACE }}/mongo_data" >> $GITHUB_ENV
+        echo "APP_DATA_PATH=${{ runner.workspace }}/app_data" >> $GITHUB_ENV
+        echo "MONGO_DATA_PATH=${{ runner.workspace }}/mongo_data" >> $GITHUB_ENV
         echo "MONGO_URL=${{ secrets.MONGO_URL }}" >> $GITHUB_ENV
         echo "MONGO_PORT=${{ secrets.MONGO_PORT }}" >> $GITHUB_ENV
         echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> $GITHUB_ENV
