--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,13 @@
             "console": "integratedTerminal",
         },
         {
+            "name": "Data Processing Validation",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "data_validation/data_processing_validation.py",
+            "console": "integratedTerminal",
+        },
+        {
             "name": "Test Daliy Raw Dump",
             "type": "debugpy",
             "request": "launch",
@@ -47,6 +54,15 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/access_layer.py",
+            "console": "integratedTerminal",
+            "justMyCode": false,
+            "envFile": "${workspaceFolder}/.env.test",
+        },
+        {
+            "name": "System Tests",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/system_tests/main.py",
             "console": "integratedTerminal",
             "justMyCode": false,
             "envFile": "${workspaceFolder}/.env.test",
