--- a/.github/workflows/_stage_publishing.yml
+++ b/.github/workflows/_stage_publishing.yml
@@ -17,3 +17,13 @@ jobs:
       branch: "stage"
       environment: "staging"
     secrets: inherit
+
+  # testing:
+  #   runs-on: 
+  #     - self-hosted
+  #     - staging
+  #   needs: call-workflow
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Build and run tests
+  #       run: ./system_test.sh "test-super-dataset-2"
