--- a/.github/workflows/system_test_pr.yml
+++ b/.github/workflows/system_test_pr.yml
@@ -28,6 +28,7 @@ jobs:
           echo "KAGGLE_KEY=${{ secrets.KAGGLE_KEY }}" >> $GITHUB_ENV
           echo "MONGO_USERNAME=${{ secrets.MONGO_USERNAME }}" >> $GITHUB_ENV
           echo "MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }}" >> $GITHUB_ENV
+          echo "API_TOKEN=${{ secrets.API_TOKEN }}" >> $GITHUB_ENV
 
       - name: Run system test
         run: ./local_test.sh "test-super-dataset-2" 
