--- a/.github/workflows/system_test_pr.yml
+++ b/.github/workflows/system_test_pr.yml
@@ -29,6 +29,8 @@ jobs:
           echo "MONGO_USERNAME=${{ secrets.MONGO_USERNAME }}" >> $GITHUB_ENV
           echo "MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }}" >> $GITHUB_ENV
           echo "API_TOKEN=${{ secrets.API_TOKEN }}" >> $GITHUB_ENV
+          echo "SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}" >> $GITHUB_ENV
+          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> $GITHUB_ENV
 
       - name: Run system test
         run: ./local_test.sh "test-super-dataset-2" 
