--- a/.github/workflows/restart_mongo.yml
+++ b/.github/workflows/restart_mongo.yml
@@ -16,4 +16,4 @@ jobs:
           rm -rf "${{ runner.workspace }}/mongo_data"
           mkdir -p "${{ runner.workspace }}/mongo_data"
           docker compose up -d mongodb
-          echo "Mongo restarted"s
+          echo "Mongo restarted"
