--- a/.github/workflows/restart_mongo.yml
+++ b/.github/workflows/restart_mongo.yml
@@ -12,8 +12,6 @@ jobs:
       - name: Restart Mongo
         run: |
           echo "Removing mongo data"
-          docker compose down mongodb
-          rm -rf "${{ runner.workspace }}/mongo_data"
-          mkdir -p "${{ runner.workspace }}/mongo_data"
-          docker compose up -d mongodb
+          sudo rm -rf "${{ runner.workspace }}/mongo_data"
+          sudo mkdir -p "${{ runner.workspace }}/mongo_data"
           echo "Mongo restarted"
