--- a/.github/workflows/stage_test_after_publish.yml
+++ b/.github/workflows/stage_test_after_publish.yml
@@ -14,5 +14,18 @@ jobs:
       - staging
     steps:
       - uses: actions/checkout@v4
-      - name: Build and run staging system tests
-        run: ./system_test.sh "test-super-dataset-2" "mongodb" "supermarket-api" 
+      - name: Build and run staging system tests        
+        env:
+          MONGO_USERNAME: ${{ secrets.MONGO_USERNAME }}
+          MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
+          MONGO_PORT: ${{ secrets.MONGO_PORT }}
+          API_TOKEN: ${{ secrets.API_TOKEN }}
+          KAGGLE_USERNAME: ${{ secrets.KAGGLE_USERNAME }}
+          KAGGLE_KEY: ${{ secrets.KAGGLE_KEY }}
+          ENABLED_SCRAPERS: ${{ secrets.ENABLED_SCRAPERS }}
+          ENABLED_FILE_TYPES: ${{ secrets.ENABLED_FILE_TYPES }}
+          LIMIT: ${{ secrets.LIMIT }}
+          NUM_OF_OCCASIONS: ${{ secrets.NUM_OF_OCCASIONS }}
+          SUPABASE_KEY: ${{ secrets.SUPABASE_KEY }}
+          SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+        run: ./system_test.sh "test-super-dataset-2" "mongodb" "supermarket-api"
