--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ starlette==0.36.3
 supabase
 sqlalchemy==2.0.27
 filelock==3.18.0
+aiokafka==0.9.0
 requests>=2.32.2 # not directly required, pinned by Snyk to avoid a vulnerability
 urllib3>=2.2.2 # not directly required, pinned by Snyk to avoid a vulnerability
 zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
