--- a/.env.templete
+++ b/.env.templete
@@ -8,8 +8,8 @@ MONGO_PORT=mongo_port
 MONGO_DATA_PATH=path_to_mongo_data_folder
 APP_DATA_PATH=path_to_app_data_folder
 
-LIMIT=10
-OPERATION=scraping,converting,clean_dump_files,api_update
+# LIMIT=10
+# OPERATION=scraping,converting,clean_dump_files,api_update
 
 SUPABASE_TOKEN=supabase_token
 SUPABASE_URL=supabase_url
