--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,6 +63,9 @@ services:
       - ENABLED_FILE_TYPES=${ENABLED_FILE_TYPES}
       - LOG_LEVEL=${LOG_LEVEL:-WARNING}
       - OUTPUT_DESTINATION=mongo
+      - STOP=${STOP}
+      - REPEAT=${REPEAT}
+      - WAIT_TIME_SECONDS=${WAIT_TIME_SECONDS}
     volumes:
       - app_data:/usr/src/app/app_data
     networks:
