--- a/.github/workflows/_stage_deploy.yml
+++ b/.github/workflows/_stage_deploy.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
           
       - name: Adding env variables    
         run: |
@@ -59,4 +59,4 @@ jobs:
       - name: Make sure mongodb is running
         run: docker compose up -d
 
-      # act -W '.github/workflows/deploy_api.yml' -P self-hosted=catthehacker/ubuntu:act-latest
+      # act -W '.github/workflows/_stage_deploy.yml' -P self-hosted=catthehacker/ubuntu:act-latest --secret-file .env.stage
