--- a/.github/workflows/publish_docker.yml
+++ b/.github/workflows/publish_docker.yml
@@ -39,4 +39,5 @@ jobs:
         with:
           context: .
           push: true
+          target: data_processing
           tags: erlichsefi/data-fetcher:latest
