--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ mockafka-py==0.2.1
 requests>=2.32.2 # not directly required, pinned by Snyk to avoid a vulnerability
 urllib3>=2.5.0 # not directly required, pinned by Snyk to avoid a vulnerability
 zipp>=3.19.1 # not directly required, pinned by Snyk to avoid a vulnerability
+python-logging-discord-handler==0.1.5
