--- a/.env.templete
+++ b/.env.templete
@@ -1,16 +1,31 @@
+# For push and pull with kaggle
 KAGGLE_KEY=your_kaggle_key
 KAGGLE_USERNAME=your_kaggle_username
+KAGGLE_DATASET_REMOTE_NAME=target_kaggle_name
 
+# For short term push and pull
 MONGO_USER=your_mongo_user
 MONGO_PASSWORD=your_mongo_password
 MONGO_URL=mongo_url
 MONGO_PORT=mongo_port
 MONGO_DATA_PATH=path_to_mongo_data_folder
+MONGODB_URI=the_constracted_api # TBD: duplicate - to remove
+
+# path to store app data
 APP_DATA_PATH=path_to_app_data_folder
 
+# Scraping Params
 # LIMIT=10
-# OPERATION=scraping,converting,clean_dump_files,api_update
 
-SUPABASE_TOKEN=supabase_token
+
+# Only needed for API (to validate token)
 SUPABASE_URL=supabase_url
 SUPABASE_KEY=supabase_key
+# The token to use as an admin
+SUPABASE_TOKEN=supabase_token
+
+TZ=Asia/Jerusalem
+
+# required to publish the docker
+DOCKER_USERNAME=docker_username
+DOCKER_PASSWORD=docker_token
