--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,10 +38,15 @@ services:
       - ENABLED_SCRAPERS=${ENABLED_SCRAPERS}
       - ENABLED_FILE_TYPES=${ENABLED_FILE_TYPES}
       - LOG_LEVEL=${LOG_LEVEL:-WARNING}
-
     networks:
       - mongo-network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/service_health" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
 
   data_processor:
     build:
@@ -66,10 +71,17 @@ services:
       - STOP=${STOP}
       - REPEAT=${REPEAT}
       - WAIT_TIME_SECONDS=${WAIT_TIME_SECONDS}
+      - HEALTHCHECK_MAX_AGE_SECONDS=${HEALTHCHECK_MAX_AGE_SECONDS:-300}
     volumes:
       - app_data:/usr/src/app/app_data
     networks:
       - mongo-network
+    healthcheck:
+      test: ["CMD", "python", "healthcheck.py"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
     deploy:
       resources:
         limits:
