--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,9 +69,10 @@ services:
       - ENABLED_FILE_TYPES=${ENABLED_FILE_TYPES}
       - LOG_LEVEL=${LOG_LEVEL:-WARNING}
       - OUTPUT_DESTINATION=mongo
-      - STOP=${STOP}
-      - REPEAT=${REPEAT}
-      - WAIT_TIME_SECONDS=${WAIT_TIME_SECONDS}
+      - STOP_DAG_CONDITION=${STOP_DAG_CONDITION}
+      - EXEC_FINAL_OPERATIONS_CONDITION=${EXEC_FINAL_OPERATIONS_CONDITION}
+      - SECOND_TO_WAIT_AFTER_FINAL_OPERATIONS=${SECOND_TO_WAIT_AFTER_FINAL_OPERATIONS}
+      - SECOND_TO_WAIT_BETWEEN_OPERATIONS=${SECOND_TO_WAIT_BETWEEN_OPERATIONS}
       - HEALTHCHECK_MAX_AGE_SECONDS=${HEALTHCHECK_MAX_AGE_SECONDS:-300}
     volumes:
       - app_data:/usr/src/app/app_data
@@ -81,7 +82,7 @@ services:
       test: ["CMD", "python", "healthcheck.py"]
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 2
       start_period: 60s
     deploy:
       resources:
