--- a/.github/workflows/system_test_pr.yml
+++ b/.github/workflows/system_test_pr.yml
@@ -32,5 +32,8 @@ jobs:
           echo "SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}" >> $GITHUB_ENV
           echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> $GITHUB_ENV
 
-      - name: Run system test
-        run: ./local_test.sh "test-super-dataset-2" 
+      - name: Run system test with incremental mode
+        run: ./local_test.sh --incremental 
+
+      - name: Run system test with persistent mode
+        run: ./local_test.sh --persist 
