--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       - mongo-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "response=$$(curl -s -X GET http://localhost:8000/service_health -H 'accept: application/json' -H 'Authorization: Bearer ${API_TOKEN}') && echo \"$$response\" | grep -q '\"status\":\"healthy\"'"]
+      test: ["CMD-SHELL", "response=$$(curl -s -X GET http://localhost:8000/service_health -H 'accept: application/json') && echo \"$$response\" | grep -q '\"status\":\"healthy\"'"]
       interval: 30s
       timeout: 10s
       retries: 3
